--- a/index.html
+++ b/index.html
@@ -10,20 +10,20 @@
         </div>
            <div class="main-doc">
                <div id="left-section">
-               <ol>
-                  <a class="main-doc" rel="ïnternal" href="#What is communication? "><li>what is communication</li></a>
-                   <a class="main-doc" rel="internal" href="#Why do people communicate?"><li>why do people communicate</li></a>
-                   <a class="main-doc" rel="internal" href="#types of communication" ><li>types of communication</li></a>
-               </ol>
+               <ul>
+                    <li><a class="main-doc" rel="ïnternal" href="#What_is_communication ">what is communication</a></li>
+                    <li><a class="main-doc" rel="internal" href="#Why_do_people_communicate">why do people communicate</a></li>
+                    <li><a class="main-doc" rel="internal" href="#types_of_communication" >types of communication</a></li>
+               </ul>
 
            </div>
            
            <div id="right-section">
-               <h4>What is communication?</h4>
+               <h4 id="What_is_communication">What is communication?</h4>
                <p>Communication definition is - a process by which information is exchanged between individuals 
                    through a common system of symbols, signs, or behavior; also : exchange of information. 
                    How to use communication in a sentence.</p>
-                   <h4>Why do people communicate?</h4>
+                   <h4 id="Why_do_people_communicate">Why do  people communicate?</h4>
                    <p>Communication can be used to seek information. A person will ask questions to someone who
                         has more knowledge of the subject and so when they tell them the answers to 
                         their questions the person is left with more information which in turn will be passed 
@@ -34,7 +34,7 @@
                         <p>Communication can also be used in the other direction for the reason 
                             to learn and understand. People can use communication to question and acquire knowledge from others.
                         </p>
-                        <h4>types of communication</h4>
+                        <h4 id="types_of_communication">Types of communication</h4>
                         <p>there are basically two types of communication ie;</p>
                         <ol>
                             <li>verbal communication</li>
